# PyJapanglish

./: README.md  pyproject.toml
pyjapanglish/: __init__.py  japanglish.py
test/: test_japanglish.py
